--- a/themes/base_files/scss/_tiki-tabs_and_tables.scss
+++ b/themes/base_files/scss/_tiki-tabs_and_tables.scss
@@ -123,7 +123,7 @@ td.url{
 
 @media only screen and (max-width: breakpoint-max(sm)) {
 	.toggle-table {
-		position: absolute; right: 15px; margin-top: -52px;
+		position: absolute; right: 5px; margin-top: -50px;
 		.btn-link { font-weight: 600; font-size: 1.8em; text-decoration: none !important; }
 	}
 
@@ -164,6 +164,7 @@ td.url{
 						clear: both;
 						content: "";
 					}
+					&.checkbox-cell { width: auto; }
 //					&.action:not(:nth-child(1)) { display: none; }
 				}
 
